edit validation for name